--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 header_inner d-flex justify-content-between">
+          <div class="col-sm-12 header_inner d-flex justify-content-between">
             <div class="header_logo">Webchat</div>
             <button type="button" class="btn btn-primary">QUIT</button>
           </div>
@@ -21,7 +21,7 @@
     <section class="intro">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 user_online d-flex flex-column">
+          <div class="col-sm-5 col-md-4 user_online d-flex flex-column">
             <div class="your_login d-flex flex-row">
               <div class="avatar">
                 <img
@@ -86,7 +86,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-8 chat"></div>
+          <div class="col-sm-7 col-md-8 chat"></div>
         </div>
       </div>
     </section>
