--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
               </div>
               <div class="user_name">Nechvoglod Oleg</div>
             </div>
-            <!-- <div class="your_login d-flex flex-row"> -->
             <form>
               <div class="form-group d-flex flex-row search">
                 <button type="submit" class="search_button">
@@ -49,54 +48,53 @@
                 />
               </div>
             </form>
-            <!-- </div> -->
             <h5 class="user_online_header">
               users online
             </h5>
             <div class="intro_inner">
-              <div class="your_login d-flex flex-row">
+              <div class="login d-flex flex-row">
                 <div class="avatar">
                   <img src="images/avatar.png" alt="your foto" />
                 </div>
                 <div class="user_name">Nechvoglod Oleg</div>
               </div>
-              <div class="your_login d-flex flex-row">
+              <div class="login d-flex flex-row">
                 <div class="avatar">
                   <img src="images/avatar.png" alt="your foto" />
                 </div>
                 <div class="user_name">Nechvoglod Oleg</div>
               </div>
-              <div class="your_login d-flex flex-row">
+              <div class="login d-flex flex-row">
                 <div class="avatar">
                   <img src="images/avatar.png" alt="your foto" />
                 </div>
                 <div class="user_name">Nechvoglod Oleg</div>
               </div>
-              <div class="your_login d-flex flex-row">
+              <div class="login d-flex flex-row">
                 <div class="avatar">
                   <img src="images/avatar.png" alt="your foto" />
                 </div>
                 <div class="user_name">Nechvoglod Oleg</div>
               </div>
-              <div class="your_login d-flex flex-row">
+              <div class="login d-flex flex-row">
                 <div class="avatar">
                   <img src="images/avatar.png" alt="your foto" />
                 </div>
                 <div class="user_name">Nechvoglod Oleg</div>
               </div>
-              <div class="your_login d-flex flex-row">
+              <div class="login d-flex flex-row">
                 <div class="avatar">
                   <img src="images/avatar.png" alt="your foto" />
                 </div>
                 <div class="user_name">Nechvoglod Oleg</div>
               </div>
-              <div class="your_login d-flex flex-row">
+              <div class="login d-flex flex-row">
                 <div class="avatar">
                   <img src="images/avatar.png" alt="your foto" />
                 </div>
                 <div class="user_name">Nechvoglod Oleg</div>
               </div>
-              <div class="your_login d-flex flex-row">
+              <div class="login d-flex flex-row">
                 <div class="avatar">
                   <img src="images/avatar.png" alt="your foto" />
                 </div>
@@ -104,7 +102,71 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-7 col-md-8 chat"></div>
+          <div class="col-sm-7 col-md-8 chat">
+            <div class="chat_inner">
+              <div class="chat_login d-flex flex-row">
+                <div class="avatar_chat">
+                  <img src="images/avatar.png" alt="your foto" />
+                </div>
+                <div class="user_name">
+                  <p>Nechvoglod Oleg</p>
+                  <p class="message">
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  </p>
+                </div>
+              </div>
+              <div class="chat_login d-flex flex-row">
+                <div class="avatar_chat">
+                  <img src="images/avatar.png" alt="your foto" />
+                </div>
+                <div class="user_name">
+                  <p>Nechvoglod Oleg</p>
+                  <p class="message">
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                  </p>
+                </div>
+              </div>
+              <div class="chat_login d-flex flex-row">
+                <div class="avatar_chat">
+                  <img src="images/avatar.png" alt="your foto" />
+                </div>
+                <div class="user_name">
+                  <p>Nechvoglod Oleg</p>
+                  <p class="message">
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  </p>
+                </div>
+              </div>
+              <div class="chat_login d-flex flex-row">
+                <div class="avatar_chat">
+                  <img src="images/avatar.png" alt="your foto" />
+                </div>
+                <div class="user_name">
+                  <p>Nechvoglod Oleg</p>
+                  <p class="message">
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <form>
+              <div class="form-group d-flex flex-column form_sms">
+                <textarea maxlength="200" class="form-control"></textarea>
+                <button type="button" class="btn btn-success btn_send">
+                  Success
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </section>
