--- a/form-reg.html
+++ b/form-reg.html
@@ -65,6 +65,6 @@
         </div>
         </div>
       </div>
-    <script src="js/js.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
